# robosapiens-adaptive-platform-turtlebot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  requirements.txt
.devcontainer/mesa-full-tb3/: devcontainer.json
.devcontainer/mesa-full-tb4/: devcontainer.json
.devcontainer/nogpu/: devcontainer.json
.devcontainer/nogpu-full-tb3/: devcontainer.json
.devcontainer/nogpu-full-tb4/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.devcontainer/nvidia-full-tb3/: devcontainer.json
.devcontainer/nvidia-full-tb4/: devcontainer.json
.github/workflows/: rust.yml
3rdParties/: README.md
HelloWorld/: requirements.txt  robosapiensIO.ini  rpio_commands_placeholder.py
HelloWorld/Design/: HelloWorld_AADLIL.py
HelloWorld/Resources/: LiveDashboard.py  LiveDashboard_LattePanda.py  main.py
HelloWorldv2/: robosapiensIO.ini  rpio_commands_placeholder.py
HelloWorldv2/Concept/: Analysis.rct  Execute.rct  Legitimate.rct
HelloWorldv2/Design/: AADLIL.py  LogicalArchitecture.aadl  design.json
HelloWorldv2/Resources/: main_xeon1.py
HelloWorldv3/: robosapiensIO.ini
HelloWorldv3/Concept/: Knowledge.rct  Plan.rct
HelloWorldv3/Design/: AADLIL.py
HelloWorldv3/Workflows/: AADL2CODE.py
NTNU/: README.md  robosapiensIO.ini  rpio_commands_placeholder.py
NTNU/Design/: LogicalArchitecture.aadl  NTNU_AADLIL.py  PhysicalArchitecture.aadl  example1.py  messages.aadl  system.json
NTNU/Resources/: LiveDashboard.py  main_xeon1.py
PAL-Helloworld/: compose.yaml
PAL-Helloworld/Bridge/: Dockerfile.simple  ROS2MqttBridge.py  Simplebridge.py  entrypoint.sh
PAL-Helloworld/ManagedSystem/: Dockerfile  Turtlebotsim.py
PAL-Helloworld/ManagingSystem/: Dockerfile
ShipNavigationPredict/Ship_Model_Code/: ShipSimulator.py  Ship_navigation_maple-k.py  config.yaml  config_a.yaml  config_e.yaml  config_l.yaml  config_m.yaml  config_p.yaml  drawShip.py  main.py  ship_maneuvering_model.py  ship_maneuvering_model_M12.py  ship_maneuvering_model_M2.py  ship_maneuvering_model_M7.py
benches/: simple_add.rs
docker/: Dockerfile  DockerfileDeploy  docker-compose.yaml
examples/: defer.input  eval.lola  future.input  list.input  past.lola  past_and_future.input  simple_add_distribution_graph.json  simple_add_typed.lola  update.input  update.lola
lidarocclusion/: setup.py
lidarocclusion/lidarocclusion/: masks.py
lidarocclusionmapek/: M_comp.py
maple-loops/: README.md
maple-loops/HelloWorld/: LiveDashboard.py  README.md  main.py
maple-loops/HelloWorld-modified/: LiveDashboard.py  main.py  requirements.txt
maple-loops/NTNU/: rpio_commands_placeholder.py
maple-loops/PAL-Helloworld/: README.md
proptest-regressions/dependencies/: graph_based.txt
ros2mqttbridge/: .gitignore  Cargo.toml  README.md
ros2mqttbridge/.devcontainer/: devcontainer.json
ros2mqttbridge/.devcontainer/mesa/: devcontainer.json
ros2mqttbridge/.devcontainer/nogpu/: devcontainer.json
ros2mqttbridge/.devcontainer/nvidia/: devcontainer.json
ros2mqttbridge/docker/: Dockerfile  DockerfileDeploy  docker-compose.yaml  entrypoint.sh  setup.bash
ros2mqttbridge/src/: bridge.rs  lib.rs  main.rs
ros2mqttbridge/tests/: test_bridge.rs
src/: ast.rs  async_runtime.rs  core.rs  file_handling.rs  lib.rs  lola_fixtures.rs  macros.rs  main.rs  mqtt_input_provider.rs  null_output_handler.rs  parser.rs  stdout_output_handler.rs  stream_utils.rs  typed_monitoring_combinators.rs
tests/: constraint_based_lola.rs  test_distributed_mqtt.rs  test_mqtt_io.rs  typed_untimed_semantics_async.rs  untimed_semantics_async.rs  untimed_semantics_queuing.rs
trustworthiness-checker/: .dockerignore  Cargo.toml
trustworthiness-checker/.devcontainer/mesa/: devcontainer.json
trustworthiness-checker/.github/workflows/: rust.yml
trustworthiness-checker/benches/: simple_add.rs
trustworthiness-checker/docker/: DockerfileDeploy
trustworthiness-checker/examples/: counter.input  counter.lola  defer.lola  eval.input  future.lola  list.lola  simple_add.input  simple_add.lola  simple_add_distributable.lola  simple_add_illtyped.lola  simple_add_mapping.json
trustworthiness-checker/src/: commandline_args.rs  constraint_based_runtime.rs  constraint_solver.rs  core.rs  file_input_provider.rs  lib.rs  main.rs  monitoring_semantics.rs  mqtt_output_handler.rs  queuing_runtime.rs  ros_topic_stream_mapping.rs  stream_utils.rs  type_checking.rs  typed_monitoring_semantics.rs  untimed_monitoring_combinators.rs
trustworthiness-checker/src/cli/: args.rs
trustworthiness-checker/src/dependencies/: empty.rs  graph_based.rs
trustworthiness-checker/src/distributed/: distribution_graphs.rs  static_work_scheduler.rs
trustworthiness-checker/src/io/: mod.rs
trustworthiness-checker/src/io/cli/: mod.rs
trustworthiness-checker/src/io/file/: file_handling.rs  input_provider.rs
trustworthiness-checker/src/io/mqtt/: client.rs  mod.rs  output_handler.rs
trustworthiness-checker/src/io/testing/: manual_output_handler.rs  null_output_handler.rs
trustworthiness-checker/src/lang/: mod.rs
trustworthiness-checker/src/lang/core/: parser.rs
trustworthiness-checker/src/lang/dynamic_lola/: ast.rs  mod.rs  parser.rs
trustworthiness-checker/src/lang/untimed_input/: parser.rs
trustworthiness-checker/src/runtime/: mod.rs  queuing.rs
trustworthiness-checker/src/runtime/constraints/: runtime.rs  solver.rs
trustworthiness-checker/src/semantics/: mod.rs
trustworthiness-checker/src/semantics/untimed_typed_lola/: combinators.rs  mod.rs
trustworthiness-checker/src/semantics/untimed_untyped_lola/: combinators.rs  mod.rs
trustworthiness-checker/tests/: constraint_based_lola.rs  lola_fixtures.rs  test_mqtt_io.rs  test_ros_input_provider.rs  typed_untimed_semantics_async.rs  untimed_semantics_async.rs
trustworthiness-specs/: maple_seq.lola
turtlebotrossim/: .dockerignore
turtlebotrossim/scan_relay_ws/rviz_plugin/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
turtlebotrossim/scan_relay_ws/rviz_plugin/include/rviz_plugin/: rviz_panel.hpp
turtlebotrossim/scan_relay_ws/rviz_plugin/src/: rviz_panel.cpp
(+220 files in other folders)
