[package]
name = "ros2mqttbridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]


[dependencies]
r2r = { version = "0.9.4" }
tracing = {version = "0.1.41", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version="0.3.19", features=["env-filter", "fmt"]}
uuid = {version = "1.15.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
paho-mqtt = {version = "0.13.1", default-features=false, features=["bundled", "ssl"]}
futures = "0.3.31"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-stream = {version ="0.1.16", features=["full"] }
tokio-util = "0.7.12"
clap = { version = "4.5.27", features = ["derive"] }
async-stream = "0.3.6"
serde_json5 = "0.2.0"
testcontainers = "0.23.3"
async-once-cell = "0.5.4"
test-log = {version="0.2.17", features=["trace"]}
