[package]
name = "trustworthiness_checker"
version = "0.1.0"
edition = "2021"
default-run = "trustworthiness_checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
# console-subscriber = "0.4.0"
winnow = "0.6.24"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-stream = {version ="0.1.16", features=["full"] }
tokio-util = "0.7.12"
clap = { version = "4.5.27", features = ["derive"] }
async-stream = "0.3.6"
r2r = { version = "0.9.3", optional=true }
thiserror = "2.0.11"
justerror = "1.1.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.137"
# mqtt client
# Disable the default dependency on SSL to avoid a build dependency on OpenSSL
paho-mqtt = {version = "0.13.0", default-features=false, features=["bundled", "ssl"]}
async-trait = "0.1.85"
async-once-cell = "0.5.4"
tracing = {version = "0.1.41", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version="0.3.19", features=["env-filter", "fmt"]}
uuid = {version = "1.12.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[features]
ros = ["dep:r2r"]
testcontainers = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
testcontainers-modules = "0.11.5"
test-log = {version="0.2.17", features=["trace"]}

[[bench]]
name = "simple_add"
harness = false

# [[bench]]
# name = "maple_sequence"
# harness = false